[workspace]
resolver = "2"
members = [
    "tauri-app/src-tauri",
]

[patch.crates-io]
tauri = { git = "https://github.com/tauri-apps/tauri.git", branch = "dev", features = [] }
tauri-build = { git = "https://github.com/tauri-apps/tauri.git", branch = "dev", features = [] }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2", features = [] }
